# msa

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  cleanup  cleanup.win
R/: AllClasses.R  AllGenerics.R  convertRows.R  helperFunctions.R  inputChecks.R  msa.R  msaCheckNames.R  msaClustalOmega.R  msaClustalW.R  msaConsensusSequence-methods.R  msaConservationScore-methods.R  msaConvert.R  msaMuscle.R  msaPrettyPrint.R  params-methods.R  print-methods.R  show-methods.R  version-methods.R
inst/: CITATION  COPYRIGHT  NEWS
inst/examples/: HemoglobinAA.fasta  exampleAA.fasta  exampleDNA.fasta  exampleRNA.fasta
inst/extdata/: msaClustalOmegaHelp.txt  msaClustalWHelp.txt  msaCommonHelp.txt  msaHelpPrefix.txt  msaMuscleHelp.txt
inst/tex/: ciliate.cod  standard.cod  texshade.sty
man/: MsaMetaData-class.Rd  MsaMultipleAlignmentClasses.Rd  msa-package.Rd  msa.Rd  msaCheckNames.Rd  msaClustalOmega.Rd  msaClustalW.Rd  msaConsensusSequence-methods.Rd  msaConservationScore-methods.Rd  msaConvert.Rd  msaMuscle.Rd  msaPrettyPrint.Rd
src/: Makevars  Makevars.win  R_init_msa.cpp  SplitCharVector2List.cpp  SplitCharVector2List.h  SplitCharVector2Matrix.cpp  SplitCharVector2Matrix.h
src/ClustalOmega/: #msaMakefile#  Doxyfile  aclocal.m4  configure  configure.ac  msaMakefile  msaMakefile.win
src/ClustalOmega/src/: Makefile.am  Makefile.in  RClustalOmega.cpp  RClustalOmega.h  clustal-omega-config.h  clustal-omega.c  clustal-omega.h  clustalo-api-test.c  config.h.in  main.cpp  mymain.c  mymain.h
src/ClustalOmega/src/argtable2/: Makefile.in  arg_int.c  argtable2.c  config.h  getopt.c  getopt1.c
src/ClustalOmega/src/clustal/: hhalign_wrapper.c  hhalign_wrapper.h  ktuple_pair.c  list.c  log.c  mbed.c  pair_dist.c  pair_dist.h  progress.h  seq.c  seq.h  symmatrix.c  symmatrix.h  util.c
src/ClustalOmega/src/exceptions4c/: Makefile.am  Makefile.in  config.h  e4c_lite.c  e4c_lite.h
src/ClustalOmega/src/hhalign/: general.h  hash-C.h  hhalign.cpp  hhalign.h  hhalignment-C.h  hhdecl-C.h  hhfullalignment-C.h  hhfunc-C.h  hhfunc.h  hhhalfalignment-C.h  hhhit-C.h  hhhitlist-C.h  hhhmm-C.h  hhmatrices-C.h  hhutil-C.h  list-C.h  list.h  util-C.h
src/ClustalOmega/src/kmpp/: KMeans.cpp  KMeans.h  KmUtils.cpp  KmUtils.h
src/ClustalOmega/src/squid/: a2m.c  clustal.c  gki.c  hsregex.c  msa.c  msa.h  msf.c  phylip.c  revcomp.c  sqerror.c  sqio.c  squid.h  sre_string.c  ssi.c  stockholm.c  stopwatch.c  stopwatch.h
src/ClustalW/: Makefile.am  Makefile.in  configure  configure.ac  msaMakefile  msaMakefile.win
src/ClustalW/m4/: Makefile.am  Makefile.in
src/ClustalW/src/: Clustal.cpp  Clustal.h  Help.cpp  Help.h  Makefile.am  Makefile.in  RClustalW.cpp  RClustalW.h  RClustalWMain.cpp  RClustalWMain.h  clustalw_version.h  clustalw_version.h.in  config.h.in  main.cpp
src/ClustalW/src/alignment/: Alignment.cpp  Alignment.h  AlignmentOutput.cpp  AlignmentOutput.h  ObjectiveScore.cpp  ObjectiveScore.h  Sequence.cpp  Sequence.h
src/ClustalW/src/fileInput/: ClustalFileParser.cpp  ClustalFileParser.h  EMBLFileParser.cpp  EMBLFileParser.h  FileParser.cpp  FileParser.h  FileReader.cpp  FileReader.h  GDEFileParser.cpp  GDEFileParser.h  InFileStream.cpp  InFileStream.h  MSFFileParser.cpp  MSFFileParser.h  PIRFileParser.cpp  PIRFileParser.h  PearsonFileParser.cpp  PearsonFileParser.h  RSFFileParser.cpp  RSFFileParser.h
src/ClustalW/src/general/: Array2D.h  ClustalWResources.cpp  ClustalWResources.h  DebugLog.cpp  DebugLog.h  InvalidCombination.cpp  OutputFile.cpp  OutputFile.h  RandomAccessLList.h  SequenceNotFoundException.h  SquareMat.h  Stats.cpp  Stats.h  SymMatrix.cpp  SymMatrix.h  UserParameters.cpp  UserParameters.h  Utility.cpp  Utility.h  VectorOutOfRange.cpp  VectorOutOfRange.h  VectorUtility.h  clustalw.h  debuglogObject.h  general.h  param.h  statsObject.h  userparams.h  utils.h
src/ClustalW/src/interface/: CommandLineParser.cpp  CommandLineParser.h  InteractiveMenu.cpp  InteractiveMenu.h
src/ClustalW/src/multipleAlign/: Iteration.cpp  Iteration.h  LowScoreSegProfile.cpp  LowScoreSegProfile.h  MSA.cpp  MSA.h  MyersMillerProfileAlign.cpp  MyersMillerProfileAlign.h  ProfileAlignAlgorithm.h  ProfileBase.cpp  ProfileBase.h  ProfileStandard.cpp  ProfileStandard.h  ProfileWithSub.cpp  ProfileWithSub.h
src/ClustalW/src/pairwise/: FastPairwiseAlign.cpp  FastPairwiseAlign.h  FullPairwiseAlign.cpp  FullPairwiseAlign.h  PairwiseAlignBase.h
src/ClustalW/src/substitutionMatrix/: SubMatrix.cpp  SubMatrix.h  globalmatrix.h  matrices.h
src/ClustalW/src/tree/: AlignmentSteps.cpp  AlignmentSteps.h  ClusterTree.cpp  ClusterTree.h  ClusterTreeAlgorithm.h  ClusterTreeOutput.cpp  ClusterTreeOutput.h  NJTree.cpp  NJTree.h  RandomGenerator.cpp  RandomGenerator.h  Tree.cpp  Tree.h  TreeInterface.cpp  TreeInterface.h  UnRootedClusterTree.cpp  UnRootedClusterTree.h  dayhoff.h
src/ClustalW/src/tree/UPGMA/: Node.cpp  Node.h  RootedClusterTree.cpp  RootedClusterTree.h  RootedGuideTree.cpp  RootedGuideTree.h  RootedTreeOutput.cpp  RootedTreeOutput.h  UPGMAAlgorithm.cpp  UPGMAAlgorithm.h  upgmadata.h
src/ClustalW/windows/: Makefile
src/ClustalW/windows/m4/: Makefile
src/ClustalW/windows/src/: Makefile  config.h
src/Muscle/: #subfams.cpp#  Makefile  README.txt  RMuscle.cpp  RMuscle.h  aligngivenpath.cpp  aligntwomsas.cpp  aligntwoprofs.cpp  aln.cpp  alpha.h  clust.cpp  cons.cpp  diaglist.cpp  diaglist.h  distcalc.cpp  distcalc.h  distfunc.cpp  distfunc.h  domuscle.cpp  enums.h  estring.cpp  estring.h  fasta.cpp  fasta2.cpp  fastclust.cpp  fastdistjones.cpp  fastdistkbit.cpp  fastdistkmer.cpp  fastdistmafft.cpp  finddiags.cpp  finddiagsn.cpp  gatest.cpp  glbalign352.cpp  glbaligndiag.cpp  glbalignla.cpp  glbalignle.cpp  glbalignns.cpp  globals.cpp  globalsosx.cpp  globalswin32.cpp  (+61 more)
src/gc-7.2/: mark.c  msaMakefile.win  os_dep.c
src/gc-7.6.12/: Makefile.in  configure  msaMakefile  msaMakefile.win
src/gc-7.6.12/include/: config.h.in
src/gc-8.2.2/: confcache  msaMakefile  msaMakefile.win
vignettes/: SweaveExample.txt  bioinf-article.txi  bioinf.cls  knitrExample.txt  lit.bib  msa.Rnw  ubmanual.cls
(+4 files in other folders)
