# Andreas Wilm (UCD): 2007-12-10
# Generated using the following sites 
# http://www.openismus.com/documents/linux/automake/automake.shtml
# http://www.bioinf.uni-freiburg.de/~mmann/HowTo/automake.html

# we do not use GNU-style files: NEWS README AUTHORS ChangeLog
AUTOMAKE_OPTIONS = foreign

SUBDIRS = m4 src

EXTRA_DIST = README LICENSE clustalw_help

