# Andreas Wilm (UCD): 2007-12-10
# Generated using the following sites 
# http://www.openismus.com/documents/linux/automake/automake.shtml
# http://www.bioinf.uni-freiburg.de/~mmann/HowTo/automake.html

# we do not use GNU-style files: NEWS README AUTHORS ChangeLog
AUTOMAKE_OPTIONS = foreign

SUBDIRS = 

#EXTRA_DIST =
# got the following with automake 1.10 (AW 2009-05-19):
# src/Makefile.am:13: `INCLUDES' is the old name for `AM_CPPFLAGS' (or `*_CPPFLAGS')
# deleted next line therefore
# INCLUDES = -I@top_srcdir@/

# LDADD = foofiles/libfoo.a

bin_PROGRAMS = RClustalW

RClustalW_SOURCES =  ./pairwise/PairwiseAlignBase.h \
 ./pairwise/FastPairwiseAlign.h \
 ./pairwise/FullPairwiseAlign.cpp \
 ./pairwise/FullPairwiseAlign.h \
 ./pairwise/FastPairwiseAlign.cpp \
 ./fileInput/FileParser.h \
 ./fileInput/EMBLFileParser.h \
 ./fileInput/MSFFileParser.cpp \
 ./fileInput/FileReader.cpp \
 ./fileInput/PIRFileParser.cpp \
 ./fileInput/MSFFileParser.h \
 ./fileInput/FileReader.h \
 ./fileInput/RSFFileParser.cpp \
 ./fileInput/PIRFileParser.h \
 ./fileInput/GDEFileParser.cpp \
 ./fileInput/RSFFileParser.h \
 ./fileInput/GDEFileParser.h \
 ./fileInput/InFileStream.cpp \
 ./fileInput/ClustalFileParser.cpp \
 ./fileInput/PearsonFileParser.cpp \
 ./fileInput/InFileStream.h \
 ./fileInput/ClustalFileParser.h \
 ./fileInput/PearsonFileParser.h \
 ./fileInput/FileParser.cpp \
 ./fileInput/EMBLFileParser.cpp \
 ./tree/UPGMA/RootedClusterTree.cpp \
 ./tree/UPGMA/RootedGuideTree.h \
 ./tree/UPGMA/UPGMAAlgorithm.cpp \
 ./tree/UPGMA/RootedTreeOutput.h \
 ./tree/UPGMA/RootedClusterTree.h \
 ./tree/UPGMA/Node.cpp \
 ./tree/UPGMA/UPGMAAlgorithm.h \
 ./tree/UPGMA/upgmadata.h \
 ./tree/UPGMA/Node.h \
 ./tree/UPGMA/RootedGuideTree.cpp \
 ./tree/UPGMA/RootedTreeOutput.cpp \
 ./tree/Tree.cpp \
 ./tree/ClusterTree.cpp \
 ./tree/AlignmentSteps.h \
 ./tree/Tree.h \
 ./tree/ClusterTree.h \
 ./tree/ClusterTreeAlgorithm.h \
 ./tree/TreeInterface.cpp \
 ./tree/UnRootedClusterTree.cpp \
 ./tree/ClusterTreeOutput.cpp \
 ./tree/TreeInterface.h \
 ./tree/dayhoff.h \
 ./tree/UnRootedClusterTree.h \
 ./tree/RandomGenerator.cpp \
 ./tree/NJTree.cpp \
 ./tree/ClusterTreeOutput.h \
 ./tree/RandomGenerator.h \
 ./tree/NJTree.h \
 ./tree/AlignmentSteps.cpp \
 ./interface/InteractiveMenu.cpp \
 ./interface/CommandLineParser.cpp \
 ./interface/InteractiveMenu.h \
 ./interface/CommandLineParser.h \
 ./substitutionMatrix/SubMatrix.cpp \
 ./substitutionMatrix/SubMatrix.h \
 ./substitutionMatrix/globalmatrix.h \
 ./substitutionMatrix/matrices.h \
 ./multipleAlign/Iteration.cpp \
 ./multipleAlign/MSA.cpp \
 ./multipleAlign/MyersMillerProfileAlign.cpp \
 ./multipleAlign/ProfileBase.h \
 ./multipleAlign/ProfileStandard.cpp \
 ./multipleAlign/LowScoreSegProfile.h \
 ./multipleAlign/Iteration.h \
 ./multipleAlign/MSA.h \
 ./multipleAlign/MyersMillerProfileAlign.h \
 ./multipleAlign/ProfileStandard.h \
 ./multipleAlign/ProfileWithSub.cpp \
 ./multipleAlign/ProfileAlignAlgorithm.h \
 ./multipleAlign/ProfileBase.cpp \
 ./multipleAlign/ProfileWithSub.h \
 ./multipleAlign/LowScoreSegProfile.cpp \
 ./general/ClustalWResources.h \
 ./general/OutputFile.cpp \
 ./general/VectorOutOfRange.h \
 ./general/UserParameters.cpp \
 ./general/SymMatrix.h \
 ./general/Utility.cpp \
 ./general/clustalw.h \
 ./general/OutputFile.h \
 ./general/param.h \
 ./general/utils.h \
 ./general/UserParameters.h \
 ./general/SquareMat.h \
 ./general/Utility.h \
 ./general/SequenceNotFoundException.h \
 ./general/InvalidCombination.cpp \
 ./general/Array2D.h \
 ./general/RandomAccessLList.h \
 ./general/general.h \
 ./general/debuglogObject.h \
 ./general/statsObject.h \
 ./general/userparams.h \
 ./general/DebugLog.cpp \
 ./general/ClustalWResources.cpp \
 ./general/VectorUtility.h \
 ./general/VectorOutOfRange.cpp \
 ./general/SymMatrix.cpp \
 ./general/DebugLog.h \
 ./general/Stats.cpp \
 ./general/Stats.h \
 ./Help.cpp \
 ./Help.h \
 ./alignment/Alignment.cpp \
 ./alignment/AlignmentOutput.cpp \
 ./alignment/Alignment.h \
 ./alignment/AlignmentOutput.h \
 ./alignment/ObjectiveScore.cpp \
 ./alignment/Sequence.cpp \
 ./alignment/ObjectiveScore.h \
 ./alignment/Sequence.h \
 ./Clustal.cpp \
 ./Clustal.h \
 ./clustalw_version.h \
 ./RClustalWMain.cpp \
 ./RClustalWMain.h \
 ./RClustalW.cpp \
 ./RClustalW.h
 #./main.cpp

RClustalW_LDFLAGS = -module -avoid-version -shared
